2012-05-07  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar-prg.c (check_options, main):
	make parameter --dir really only for file-selector

	* lua-akfavatar.sh: use --dir parameter

	* lua/lua-akfavatar-prg.c (find_scripts): new function

2012-05-06  Andreas K. Foerster  <info@akfoerster.de>

	* bdf2font:
        use a variable for the prefix instead of the name
	export function [prefix]get_font_dimensions
	lua/akfavatar-graphic.c: adapted

	* akfavatar.h (avt_get_font_dimensions):
	new function replaces avt_get_font_size

	* avatar.c: use variables for font-sizes

	* version.c: new file

2012-05-05  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_show_image):
	don't make inner window ever smaller

2012-05-04  Andreas K. Foerster  <info@akfoerster.de>

	* pascal/akfavatar.pas: updated
	define Csize_t for old FPC versions (needed for 2.0.4)

2012-05-02  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatr.h, avatar.c (avt_avatar_image_xbm, avt_show_image_xbm):
	use color number

	* avatar.c (avt_load_image_xpm):
	regression: doesn't support color names anymore

	* avatar.c: poison avt_colorname,
	remove functions that use it

	* akfavatar.h, avatar.c (avt_set_background_color)
	(avt_get_background_color, avt_set_balloon_color)
        (avt_set_text_color, avt_set_text_background_color):
        just take one color value

	* akfavatar.h, avtpalette.c (avt_palette):
	renamed from avt_get_palette

2012-05-01  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_get_palette): new function

	* rgb2c, avatar.c: avt_colors uses one color number

	* rgb2c, avatar.c: new macro DEFAULT_COLOR

	* avtpalette.c: new file
	avatar.c: adapted

	* akfavatar.xpm, lua.xpm: don't use named colors

	* avatar.c (avt_load_image_xpm):
	no support for named colors anymore

2012-04-30  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_colorname): new function
