@@ -1,3 +1,8 @@
+2012-05-08  Andreas K. Foerster  <info@akfoerster.de>
+
+	* lua/lua-akfavatar-prg.c (initialize, reset, start_screen):
+	no avatar image for the filechooser
+
 2012-05-07  Andreas K. Foerster  <info@akfoerster.de>
 
 	* lua/lua-akfavatar-prg.c (check_options, main):
